# geometric-algebra

./: README.md  geometric-algebra.cabal
examples/: BivectorDiagrams.hs
src/: Conformal3D.hs  Euclidean2D.hs  Euclidean3D.hs  Homogeneous2D.hs  LinearFunction.hs  Main.hs  Projective2D.hs
src/GeometricAlgebra/: Conformal3D.hs  Euclidean2D.hs  Euclidean3D.hs  Homogeneous2D.hs  LinearFunction.hs  Tutorial.hs
tests/: Tests.hs
