name:                geometric-algebra
version:             0.1.0.0
synopsis:            An implementation of geometric algebra in Haskell.
-- description:         
homepage:            github.com/phischu/geometric-algebra
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          phischu3000@googlemail.com
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable geometric-algebra
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
