name:                geometric-algebra
version:             0.1.0.0
synopsis:            An implementation of geometric algebra in Haskell.
-- description:         
homepage:            github.com/phischu/geometric-algebra
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          phischu3000@googlemail.com
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  exposed-modules:     Euclidean2D,
                       Euclidean3D,
                       Homogeneous2D
  build-depends:       base >=4.7 && <4.8,
                       linear >=1.20.2 && < 1.21
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010


executable demo-2d
  main-is:             Main.hs
  other-modules:       Euclidean2D
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       linear >=1.20.2 && < 1.21,
                       diagrams-svg >=1.3.1.9,
                       diagrams-lib >=1.3.0.8 && <1.4,
                       diagrams-contrib >=1.3.0.8 && <1.4,
                       diagrams-rasterific >=1.3.1.5 && <1.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
