name:                geometric-algebra
version:             0.1.0.0
synopsis:            An implementation of geometric algebra in Haskell.
-- description:         
homepage:            github.com/phischu/geometric-algebra
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          phischu3000@googlemail.com
-- copyright:           
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  exposed-modules:     GeometricAlgebra.Euclidean2D,
                       GeometricAlgebra.Euclidean3D,
                       GeometricAlgebra.Homogeneous2D,
                       GeometricAlgebra.Conformal3D,
                       GeometricAlgebra.LinearFunction,
                       GeometricAlgebra.Tutorial
  build-depends:       base >=4.7 && <4.8,
                       linear >=1.20.2 && < 1.21
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       geometric-algebra >=0.1.0.0 && <0.2,
                       linear >=1.20.2 && <1.21,
                       hspec >=2.2.3 && <2.3,
                       QuickCheck >=2.8.2 && <2.9
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall


executable bivector-diagrams
  main-is:             BivectorDiagrams.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       linear >=1.20.2 && < 1.21,
                       geometric-algebra >=0.1.0.0 && <0.2,
                       diagrams-svg >=1.3.1.9,
                       diagrams-lib >=1.3.0.8 && <1.4,
                       diagrams-contrib >=1.3.0.8 && <1.4,
                       diagrams-rasterific >=1.3.1.5 && <1.4
  hs-source-dirs:      examples
  default-language:    Haskell2010
  ghc-options:         -Wall
